[package]
name = "defrs"
version = "0.1.0"
authors = ["Sparkenstein <zetabytes.pp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.4"
ansi_term = "0.12"
eyre = "0.6.5"
reqwest = "0.11.2"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.3.0", features = ["full"] }

[profile.release]
opt-level = 'z' 
lto = true
codegen-units = 1